fix page header go back button being too large

--- a/src/app/components/page-header/page-header.component.scss
+++ b/src/app/components/page-header/page-header.component.scss
@@ -13,6 +13,6 @@ header {
     app-transparent-button {
         position: absolute;
         left: 1rem;
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 }
